--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,3 +73,7 @@ docstring-code-format = true
 # This only has an effect when the `docstring-code-format` setting is
 # enabled.
 docstring-code-line-length = "dynamic"
+
+[tool.pytest.ini_options]
+pythonpath = "."
+testpaths = ["tests"]
